--- a/pPT/index.html
+++ b/pPT/index.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock, Paper, Scissor</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Piedra, Papel o Tijera!!!</h1>
+    </header>
+
+    <div class="aclaraciones"></div>
+  </body>
+  <footer>
+    <h3>Aclaraciones</h3>
+    <div class="psAclaraciones">
+      <p>
+        En esta versión de Piedra, Papel o Tijera tú jugaras 5 partidas contra
+        la computadora.
+      </p>
+      <p>
+        Despues de que tú escojas con que quieres jugar la computadora
+        aleatoriamente escogera su jugada y el ganador sera elegido según las reglas del
+        tradicional juego.
+      </p>
+      <p>El ganador final es el que mas gane en 5 partidas</p>
+    </div>
+    <p style="font-style: italic; font-weight: bold;letter-spacing: 0.8px;">Hecho por Ike Gomber</p>
+  </footer>
+
   <script src="script.js"></script>
 </html>
